--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello
+<!DOCTYPE html> 
+<html>
+  <head>
+      <title>Gin</title>
+      <link rel="stylesheet" href=“style.css”>
+  </head>
+  <body>
+      <h1>Gin - Ein Erlebnis für den Gaumen</h1>
+      <p>
+        Gin ist eine meist farblose Spirituose dessen wichtigste Zutat Wacholder
+        ist. Er ist Hauptbestandteil vieler Cocktails insbesondere des Longdrinks
+        Gin Tonic.
+      </p>
+      <h2>Herstellung und Inhaltsstoffe</h2>
+      <p>
+        Der Alkohol für die Herstellung von Gin wird meist aus Getreide oder Melasse
+        gebrannt. Seinen charakteristischen Geschmack erhält der Gin aus der 
+        Aromatisierung mit Gewürzen, darunter besonders Wacholderbeeren und Koriander.
+        Weitere Bestandteile werden beliebig hinzugefügt und variieren von Hersteller
+        zu Hersteller. Insgesamt können bis zu 120 verschiedene Zutaten als Aromen
+        und Wirkstoffe beim Herstellungsprozess hinzugefügt werden.
+      </p>
+      <a href="./history.html">Zur Geschichte</a>
+  </body> 
+  
+  
+</html>
