--- a/history.html
+++ b/history.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html> 
-<html>
+<html lang="de">
   <head>
-      <title>Geschichte des Gins</title>
-       <link rel="stylesheet" href=“style.css”>
+      <title>Geschichte</title>
+      <link rel="stylesheet" href="mystyle.css">
+      <meta charset="utf-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-      <h1>Geschichte</h1>
-      <p>
-        
-      </p>
-      
+      <h1 id="home">Gin - Ein Erlebnis für den Gaumen</h1>
+      <nav>
+          <ul class="navbar">
+            <li><a class="navLink" href="./index.html">Home</a></li>
+            <li><a class="navLink" href="./history.html">Geschichte</a></li>
+            <li><a class="navLink" href="./manufacturers.html">Gin-Marken</a></li>
+          </ul>
+        </nav>
+      <main>
+        <div class="row">
+          <div class="oneColumn">
+              <img class="ginmedicine" src="./media/gin_medicine.jpg" alt="Gin History" title="Pleasant Medicine">
+              <h2 class="headerFont">Geschichte des Gins</h2>
+              <p>
+                 Die ältesten Erwähnungen eines Wacholderschnapses namens Genever stammten aus dem 17. Jahrhundert.
+                 Als Wilhelm III. von Oranien-Nassau 1689 den englischen Thron bestieg, brachte 
+                 er den Genever aus seiner Heimat mit. Auch englische Soldaten, die die Holländer im
+                 Holländisch-Spanischen Krieg unterstützten, nahmen den Schnaps in ihre Heimat mit.
+                 Dort erhielt er den Namen "Gin".
+              </p>
+              <p>
+                 Als in Nordamerika große Anbauflächen für Getreide verfügbar wurden und damit
+                 der Preis für Getreide sank, wurde auch die Alkoholherstellung billiger. Der
+                 billige und hochprozentige Gin wurde besonders in den unteren Gesellschaftsschichten
+                 immer beliebter. Der Ginkonsum stieg so stark an, sodass sich erhebliche gesundheitliche
+                 und soziale Probleme in der Bevölkerung entwickelten. Dieses Phänomen ist auch als 
+                 <a href="https://de.wikipedia.org/wiki/Gin-Epidemie" target="_blank">Gin-Krise</a> bekannt
+                 und zwang die britische Regierung zu Maßnahmen um den Ginkonsum zu verringern.
+              </p>
+          </div>
+        </div>
+      </main>      
   </body> 
   
   
