--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html> 
-<html>
+<html lang="de">
   <head>
-      <title>Gin</title>
-      <link rel="stylesheet" href=“style.css”>
+      <title>Home</title>
+      <link rel="stylesheet" href="mystyle.css">
+      <meta charset="utf-8"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-      <h1>Gin - Ein Erlebnis für den Gaumen</h1>
-      <p>
-        Gin ist eine meist farblose Spirituose dessen wichtigste Zutat Wacholder
-        ist. Er ist Hauptbestandteil vieler Cocktails insbesondere des Longdrinks
-        Gin Tonic.
-      </p>
-      <h2>Herstellung und Inhaltsstoffe</h2>
-      <p>
-        Der Alkohol für die Herstellung von Gin wird meist aus Getreide oder Melasse
-        gebrannt. Seinen charakteristischen Geschmack erhält der Gin aus der 
-        Aromatisierung mit Gewürzen, darunter besonders Wacholderbeeren und Koriander.
-        Weitere Bestandteile werden beliebig hinzugefügt und variieren von Hersteller
-        zu Hersteller. Insgesamt können bis zu 120 verschiedene Zutaten als Aromen
-        und Wirkstoffe beim Herstellungsprozess hinzugefügt werden.
-      </p>
-      <a href="./history.html">Zur Geschichte</a>
+      <header>
+        <h1 id="home">Gin - Ein Erlebnis für den Gaumen</h1>
+      </header>
+      <nav>
+          <ul class="navbar">
+          <li><a class="navLink" href="./index.html">Home</a></li>
+          <li><a class="navLink" href="./history.html">Geschichte</a></li>
+          <li><a class="navLink" href="./manufacturers.html">Gin-Marken</a></li>
+        </ul>
+      </nav>
+      <main>
+        <div class="row">
+          <div class="oneColumn">
+              <a href="https://www.gin-liebhaber.de" target="_blank">
+                <img class="ginpic1" src="./media/gin_pic1.jpg" alt="Gin Tonic" title="Zur Ginliebhaber Webseite">
+              </a>
+              <h2 class="headerFont">Herstellung und Inhaltsstoffe</h2>
+             
+              <p>
+                 Gin ist eine meist farblose Spirituose dessen wichtigste Zutat Wacholder
+                 ist. Er ist Hauptbestandteil vieler Cocktails insbesondere des Longdrinks
+                 Gin Tonic.
+                 Der Alkohol für die Herstellung von Gin wird meist aus Getreide oder Melasse
+                 gebrannt. Seinen charakteristischen Geschmack erhält der Gin aus der 
+                 Aromatisierung mit Gewürzen, darunter besonders Wacholderbeeren und Koriander.
+                 Weitere Bestandteile werden beliebig hinzugefügt und variieren von Hersteller
+                 zu Hersteller. Insgesamt können bis zu 120 verschiedene Zutaten als Aromen
+                 und Wirkstoffe beim Herstellungsprozess hinzugefügt werden.
+              </p>
+          </div>
+           
+        </div>
+        <div class="row">
+          <div class="oneColumn">
+            <p>
+              Für einen Gin Tonic ist es wichtig das passende Tonic Water zum Gin zu mixen. Das 
+              folgende Youtube-Video dient als Hilfestellung:
+            </p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Mq_ctMd3edg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </main>
   </body> 
   
   
